--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,24 @@
 version: '3'
 services:
+    laravel:
+       build:
+         context: .
+         dockerfile: Dockerfile
+       image: laravel-app
+       container_name: laravel-app
+       restart: unless-stopped
+       working_dir: /var/www/html
+       volumes:
+         - .:/var/www/html
+       ports:
+         - 5000:80
+       environment:
+         - DB_HOST=mysql
+         - DB_PORT=5505
+         - DB_DATABASE=laravel
+         - DB_USERNAME=root
+         - DB_PASSWORD=password
+
     mysql:
        image: "mysql:5.7"
        ports:
