--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
        ports:
          - 8000:80
        environment:
-         - DB_HOST=mysql
-         - DB_PORT=5505
+         - DB_HOST=laravel-app-mysql
+         - DB_PORT=3306
          - DB_DATABASE=laravel
          - DB_USERNAME=root
          - DB_PASSWORD=password
