--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+ABLY_KEY=API_KEY #Ably API key
+
 DB_CONNECTION=mysql
 DB_HOST=laravel-app-mysql
 DB_PORT=3306
