--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,3 +29,12 @@ services:
          MYSQL_ROOT_PASSWORD: "password"
      volumes:
        - ./mysql:/var/lib/mysql
+    testingdb:
+     image: mysql:8.0
+     container_name: testing
+     restart: unless-stopped
+     ports:
+       - 5050:3306
+     environment:
+         MYSQL_DATABASE: testing
+         MYSQL_ROOT_PASSWORD: "password"
